// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Location Container should render correctly 1`] = `
<div
  class="logo-bg"
>
  <div
    class="section location-container"
  >
    <div>
      <div
        class="location-label"
      >
        Location
      </div>
      <div
        class="current-location"
      >
        sample location
      </div>
    </div>
    <div>
      <button
        class="btn"
      >
        Change Location
      </button>
    </div>
  </div>
</div>
`;

exports[`Component > Location Container should render correctly when no location provided 1`] = `
<div
  class="logo-bg"
>
  <div
    class="section location-container"
  >
    <div>
      <div
        class="location-label"
      >
        Location
      </div>
      <div
        class="current-location"
      >
        Loading...
      </div>
    </div>
    <div>
      <button
        class="btn"
      >
        Change Location
      </button>
    </div>
  </div>
</div>
`;
